[package]
name = "imgui-glium-renderer"
version = "0.11.0"
edition = "2021"
description = "Glium renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui-glium-renderer"
license = "MIT OR Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
glium = { git = "https://github.com/Syndelis/glium", rev = "968fc92378caf4b8306785dd005b51cd1a7cf97f", default-features = false }
imgui = { version = "0.11.0", path = "../imgui" }

[dev-dependencies]
glium = { git = "https://github.com/Syndelis/glium", rev = "968fc92378caf4b8306785dd005b51cd1a7cf97f", default-features = false, features = ["glutin_backend"] }
imgui-winit-support = {path = "../imgui-winit-support"}
